crates/safix/src/snapshots/safix__reporter__tests__plain-sync_source_empty_generated.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: the mapping 'wg-key' mirrors wg-private for alice into the database, and it holds
no value yet. Nothing was written.

secrets/safix/users/alice/secrets.yaml does not carry the key. Evaluation could not have caught this: an
entry declares where a value lives, not that one is there.

Give it a value, then re-run:

    safix generate alice wg-private
