crates/safix/src/snapshots/safix__reporter__tests__plain-unknown_group.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: 'oncal' is not a declared group of flake.safix.groups.

Declared groups:
  - infra
  - oncall
