crates/safix/src/snapshots/safix__reporter__tests__plain-unknown_machine.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: 'deck' is not a declared machine of flake.safix.machines.

Declared machines:
  - deck
  - server
