crates/safix/src/snapshots/safix__reporter__tests__plain-unknown_mapping.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: 'ntfy-tokne' is not a declared mapping.

Declared: ntfy-token, wg-key
