crates/safix/src/snapshots/safix__reporter__tests__plain-unknown_name.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: 'no-such-secret' is not a secret flake.safix.users.alice holds.

A secret is declared in exactly one of three places, and this resolves
the owning file from all three:

  1. flake.safix.catalogue.no-such-secret — the shared catalogue — selected by
     flake.safix.users.alice.carries.no-such-secret
  2. flake.safix.users.alice.private.no-such-secret — this user's own entry
  3. flake.safix.users.<owner>.sharedWith.alice.no-such-secret — granted from outside

Declare it in one of them, then re-run. A name reaching a set only
through a perHost.<host> or perTag.<tag> add or force is refused here
too: placement is derived from those three sources alone, and the
per-host and per-tag scopes sit outside it deliberately, because they
adjust a secret for one machine rather than declare who holds it. One
file serves every host that resolves the secret, so a value set through
a single host's adjustment would apply everywhere that secret
resolves rather than only where the adjustment does.

Names flake.safix.users.alice holds:
  - alice-alone
  - team-vault
