crates/safix/src/snapshots/safix__reporter__tests__plain-unknown_option.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: unknown option '--force' (expected --host or --yes)
