crates/safix/src/snapshots/safix__reporter__tests__plain-unknown_subcommand.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: unknown subcommand 'rotate' (expected set, edit, get, view, list, generate, check, fix, audit, sync, keygen, adduser, enroll, group, upload or install)
