crates/safix/src/snapshots/safix__reporter__tests__plain-unknown_sync_mapping.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: 'grafana-typo' is not a declared mapping.

Declared: grafana, router
